fix: Folder structure and files names

--- a/src/2 - AvanadeEstudosAPI.Domain/AvanadeEstudosAPI.Domain.csproj
+++ b/src/2 - AvanadeEstudosAPI.Domain/AvanadeEstudosAPI.Domain.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\5 - AvanadeEstudosAPI.Shared\5 - AvanadeEstudosAPI.Shared.csproj" />
+    <ProjectReference Include="..\5 - AvanadeEstudosAPI.Shared\AvanadeEstudosAPI.Shared.csproj" />
   </ItemGroup>
 
 </Project>
