--- a/src/1 - AvanadeEstudosAPI.API/AvanadeEstudosAPI.API.csproj
+++ b/src/1 - AvanadeEstudosAPI.API/AvanadeEstudosAPI.API.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <PackageReference Include="automapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.8.1" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.24" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
